fixes to alignment.

--- a/src/scss/ProjectCard.scss
+++ b/src/scss/ProjectCard.scss
@@ -63,9 +63,11 @@
         }
         .github-logo-container {
             position: absolute;
-            right: 10px;
-            bottom: 10px;
+            right: 5px;
+            bottom: 5px;
             .github-logo {
+                height: 30px;
+                width: 30px;
             }
         }
     }
