--- a/src/scss/TransitionStyles.scss
+++ b/src/scss/TransitionStyles.scss
@@ -18,11 +18,10 @@
 }
 
 .wrapper-container {
-    margin: 2% 0; 
+    margin: 2% 3%;
 }
 
 @media screen and (max-width: 600px){
-
   .wrapper-container {
     margin: 60px 0;
   }
